@@ -155,6 +155,7 @@ function group_tools_init() {
 	elgg_register_action("group_tools/fix_auto_join", dirname(__FILE__) . "/actions/admin/fix_auto_join.php", "admin");
 	elgg_register_action("group_tools/notifications", dirname(__FILE__) . "/actions/admin/notifications.php", "admin");
 	elgg_register_action("group_tools/fix_acl", dirname(__FILE__) . "/actions/admin/fix_acl.php", "admin");
+	elgg_register_action("group_tools/admin/bulk_delete", dirname(__FILE__) . "/actions/admin/bulk_delete.php", "admin");
 	
 	elgg_register_action("groups/email_invitation", dirname(__FILE__) . "/actions/groups/email_invitation.php");
 	elgg_register_action("groups/decline_email_invitation", dirname(__FILE__) . "/actions/groups/decline_email_invitation.php");
@@ -267,6 +268,8 @@ function group_tools_pagesetup() {
 		elgg_extend_view("page/elements/sidebar", "group_tools/sidebar/cleanup");
 	}
 	
+	
+	elgg_register_admin_menu_item("administer", "group_bulk_delete", "administer_utilities");
 }
 
 /**
